--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p id="222">I have a dog. My dog n 3 me is DuDu. DuDu is 9 years.
          DuDu is fat. lt wears a white coat. DuDu has big eyes and 0 small ears.
          lt has one short mouth. My dog is smart. like my dog. DO you like it?
-         如果你想查询其他内容，可以在 <a href="https://www.baidu.com/">百度</a>中查询</p>
+         如果你想查询其他内容，可以在 <a href="https://www.baidu.com/" title="点击这里可以跳转取查询信息">百度</a>中查询</p>
     <p>zheshiyingyuhhhhhhh</p>
     <button>切换用户</button>
   </body>
